syntax = "proto3";

option csharp_namespace = "Sample_Streaming_gRpc.Protos";

package samplestream;

service SampleStream{
	rpc ServerSampleStreaming(Test) returns(stream Test);
	rpc ClientSampleStreaming(stream Test) returns(Test);
	rpc BidirectionalSampleStreaming(stream Test) returns(stream Test);
}

message Test{
	string TestMessage = 1;
}
